--- a/Healthcare_Assistant/.env
+++ b/Healthcare_Assistant/.env
@@ -15,3 +15,4 @@ SPECIALIST_AGENT_MODEL='gemini-2.5-flash'
 AGENT_PATH="./Healthcare_Assistant"
 SERVICE_NAME="healthcare-assistant-agent-service"
 APP_NAME="healthcare-assistant-app"
+FIRESTORE_COLLECTION="healthcare-assistant"
