--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,21 @@ dmypy.json
 
 prompts.md
 llms-full.txt
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Terraform
+terraform/.terraform/
+terraform/.terraform.lock.hcl
+terraform/*.tfstate
+terraform/*.tfstate.*
+terraform/*.tfvars
+terraform/crash.log
+terraform/crash.*.log
+terraform/override.tf
+terraform/override.tf.json
+terraform/*_override.tf
+terraform/*_override.tf.json
