added a2a and ollama

--- a/Healthcare_Assistant/.env
+++ b/Healthcare_Assistant/.env
@@ -16,3 +16,5 @@ AGENT_PATH="./Healthcare_Assistant"
 SERVICE_NAME="healthcare-assistant-agent-service"
 APP_NAME="healthcare-assistant-app"
 FIRESTORE_COLLECTION="healthcare-assistant"
+OLLAMA_API_BASE="http://localhost:11434"
+A2A_PORT="8001"
