update streamlit app to use new cloudrun backend

--- a/healthcare-frontend/.env.example
+++ b/healthcare-frontend/.env.example
@@ -3,8 +3,8 @@
 
 # Backend API URL
 # For local development: http://localhost:8080
-# For Cloud Run: https://your-backend-service-url
-BACKEND_API_URL=http://localhost:8080
+# For Cloud Run: https://medgemma-service-602402744184.us-central1.run.app
+BACKEND_API_URL=https://medgemma-service-602402744184.us-central1.run.app
 
 # Authentication
 COOKIE_KEY=your_secret_cookie_key_change_in_production
