--- a/healthcare-frontend/.streamlit/config.toml
+++ b/healthcare-frontend/.streamlit/config.toml
@@ -10,7 +10,7 @@ font = "sans serif"
 [server]
 headless = true
 port = 8080
-enableCORS = false
+enableCORS = true
 enableXsrfProtection = true
 
 [browser]
